--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,80 @@
 
   position: fixed;
   inset: 0;
+
+  background-color: #f5f5f5;
+  overflow: hidden;
+}
+
+.card {
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+.pad-30 {
+  padding: 30px;
+}
+
+.center-content-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  flex: 1 1 1px;
+  overflow: hidden;
+}
+
+.custom-button {
+  background: #88c2bb;
+  border-radius: 10px;
+  border: none;
+  color: #ffffff;
+  padding: 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 100px;
+
+  font-family: "Gilroy-Regular", sans-serif;
+}
+
+.custom-button:not(:disabled):hover {
+  background: #70a7a0;
+}
+
+.custom-button:not(:disabled):active {
+  background: #5b8d86;
+}
+
+.custom-button:disabled {
+  filter: grayscale(1);
+}
+
+input {
+  border: 2px solid #f3f3f3;
+  padding: 10px 10px;
+  border-radius: 5px;
+  font-family: "Gilroy-Regular", sans-serif;
+}
+
+form.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  min-width: 300px;
+}
+
+form.card > h2 {
+  margin: 0;
+  text-align: center;
+  font-family: "Gilroy-Bold", sans-serif;
+}
+
+form.card > div.field {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-family: "Gilroy-Regular", sans-serif;
 }
