--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,11 @@ form.card > div.field {
   gap: 5px;
   font-family: "Gilroy-Regular", sans-serif;
 }
+
+form.card > a {
+  align-self: center;
+  text-decoration: none;
+  font-family: "Gilroy-Regular", sans-serif;
+  font-size: 0.9em;
+  margin-top: 15px;
+}
