--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,23 @@ form.card > a {
   font-size: 0.9em;
   margin-top: 15px;
 }
+
+.footer {
+  font: normal normal 600 10px/12px "Gilroy-Regular";
+  letter-spacing: 0px;
+  color: #8d8d8d;
+
+  display: flex;
+  align-items: center;
+
+  padding-bottom: 5px;
+  margin-top: -25px;
+}
+
+.footer.between {
+  justify-content: space-between;
+}
+
+.footer.around {
+  justify-content: space-around;
+}
