--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -51,3 +51,14 @@
   display: flex;
   gap: 2px;
 }
+
+@media screen and (max-width: 786px) {
+  .carousel {
+    --slide-height: 250px;
+  }
+
+  .carousel-slide > .price-container {
+    flex-direction: column;
+    align-items: start;
+  }
+}
