--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   font-size: 2em;
+  min-height: 65vh;
 }
 
 @media screen and (max-width: 786px) {
